--- a/main/templates/main/partials/head.html
+++ b/main/templates/main/partials/head.html
@@ -5,6 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "menager/css/styles.css" %}">
+    <link rel="stylesheet" href="{% static "main/css/styles.css" %}">
     <title>Document</title>
 </head>
