--- a/stock/templates/stock/pages/home.html
+++ b/stock/templates/stock/pages/home.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Estoque</title>
 </head>
 <body>
+  
+    <header>
 
+    </header>
+
+    <main>
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
+
+    </main>
 
     
 </body>
