add pages home and search

--- a/client/templates/client/pages/home.html
+++ b/client/templates/client/pages/home.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NEW CLIENT</title>
 </head>
 <body>
+
+
+    <header></header>
+
+    <main>
+        <form action="">
+            <h1>NEW CLIENT</h1>
+        
+            <form action="">
+              <input type="text" placeholder="name client" name="name">
+              <input type="text" placeholder="name fantasia" name="name">
+              <input type="text" placeholder="cpf client" name="name">
+              <input type="text" placeholder="cnpj client" name="name">
+              <input type="text" placeholder="rg client" name="name">
+              <input type="text" placeholder="IE" name="name">
+              <input type="text" placeholder="phone" name="name">
+              <input type="text" placeholder="cell phone" name="name">
+              <input type="text" placeholder="email" name="name">
+              <input type="text" placeholder="address" name="name">
+              <input type="text" placeholder="number" name="name">
+              <input type="text" placeholder="complement" name="name">
+              <input type="text" placeholder="neighborhood" name="name">
+              <input type="text" placeholder="city" name="name">
+              <input type="text" placeholder="state" name="name">
+              
+              <button>Save</button>
+            </form>
+    </main>
     
 </body>
 </html>
