--- a/stock/templates/stock/pages/home.html
+++ b/stock/templates/stock/pages/home.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estoque</title>
+    <title>Stock</title>
 </head>
 <body>
-  
-    <header>
 
-    </header>
+    <header></header>
 
     <main>
-        <table>
-            <thead>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-        </table>
+        <form action="">
+            <h1>NEW PRODUCT</h1>
+        
+            <form action="">
+              <input type="text" placeholder="name product" name="name">
+              <input type="text" placeholder="id product" name="name">
+              <input type="text" placeholder="category" name="name">
+              <input type="text" placeholder="description" name="name">
+              <input type="text" placeholder="sale price" name="name">
+              <input type="text" placeholder="cost price" name="name">
+              <input type="text" placeholder="quantity in stock" name="name">
+              <input type="text" placeholder="minimum stock" name="name">
+              <input type="text" placeholder="unit of measure" name="name">
+              <input type="text" placeholder="supplier" name="name">
+              <input type="text" placeholder="id supplier" name="name">
+              <input type="text" placeholder="location in stock" name="name">
+              <input type="text" placeholder="tax code" name="name">
+              <input type="text" placeholder="ICMS-IP-ETC" name="name">
+              <input type="text" placeholder="status product" name="name">
+              <input type="text" placeholder="guarantee" name="name">
+              <input type="text" placeholder="expiration date" name="name">
+              <input type="text" placeholder="additional observations" name="name">
+              
+              
+              <button>Save</button>
+            </form>
 
+            <footer></footer>
     </main>
-
     
 </body>
 </html>
