--- a/main/templates/main/pages/home.html
+++ b/main/templates/main/pages/home.html
@@ -1,8 +1,6 @@
 {% include "main/partials/head.html" %}
 
 <body>
-    {% block main %}
-    hello 
-    {% endblock main %}
+    {% include "main/partials/header.html" %}
 </body>
 </html>
