--- a/sale/templates/sales/pages/sales.html
+++ b/sale/templates/sales/pages/sales.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sales</title>
-</head>
+{% include "sales/partials/head.html" %}
 <body>
-  <header></header>
-
+  
+  {% include "sales/partials/header.html" %}
   <main>
     <h1>NEW SALE</h1>
      <form action="">
