--- a/sale/templates/sales/pages/searchsales.html
+++ b/sale/templates/sales/pages/searchsales.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Sales</title>
-</head>
+{% include "sales/partials/head.html" %}
 <body>
-  <header></header>
+  {% include "sales/partials/header.html" %}
   <main>
     <h1>Search Sale</h1>
 
