--- a/stock/templates/stock/pages/home.html
+++ b/stock/templates/stock/pages/home.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock</title>
-</head>
+{% include "stock/partials/head.html" %}
 <body>
 
-    <header></header>
+    {% include "stock/partials/header.html" %}
 
     <main>
         <form action="">
