--- a/budget/templates/budget/pages/search_budget.html
+++ b/budget/templates/budget/pages/search_budget.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Budget</title>
-</head>
+{% include "budget/partials/head.html" %}
 <body>
-  <header></header>
+    {% include "budget/partials/header.html" %}
 
   <main>
     <form action="">
