--- a/client/templates/client/pages/home.html
+++ b/client/templates/client/pages/home.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEW CLIENT</title>
-</head>
+{% include "client/partials/head.html" %}
 <body>
 
 
-    <header></header>
+    {% include "client/partials/header.html" %}
 
     <main>
         <form action="">
