criação do header

--- a/main/templates/main/partials/head.html
+++ b/main/templates/main/partials/head.html
@@ -1,10 +1,15 @@
 {% load static %}
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "main/css/styles.css" %}">
+    <link rel="stylesheet" href="{% static "main/css/body.css" %}">
+    <link rel="stylesheet" href="{% static "main/css/global.css" %}">
+    <link rel="stylesheet" href="{% static "main/css/container.css" %}">
+    <link rel="stylesheet" href="{% static "main/css/header.css" %}">
+    <link rel="stylesheet" href="{% static "main/css/footer.css" %}">
+    
     <title>Document</title>
 </head>
