--- a/main/templates/main/pages/home.html
+++ b/main/templates/main/pages/home.html
@@ -2,5 +2,11 @@
 
 <body>
     {% include "main/partials/header.html" %}
+    <main>
+        <div class='content'>
+            <h1>pagina inincial</h1>
+        </div>
+        <footer>aqui é o footer</footer>
+    </main>
 </body>
 </html>
