--- a/client/templates/client/pages/home.html
+++ b/client/templates/client/pages/home.html
@@ -5,28 +5,31 @@
     {% include "client/partials/header.html" %}
 
     <main>
+      <div class="content">
         <form action="">
-            <h1>NEW CLIENT</h1>
-        
-            <form action="">
-              <input type="text" placeholder="name client" name="name">
-              <input type="text" placeholder="name fantasia" name="name">
-              <input type="text" placeholder="cpf client" name="name">
-              <input type="text" placeholder="cnpj client" name="name">
-              <input type="text" placeholder="rg client" name="name">
-              <input type="text" placeholder="IE" name="name">
-              <input type="text" placeholder="phone" name="name">
-              <input type="text" placeholder="cell phone" name="name">
-              <input type="text" placeholder="email" name="name">
-              <input type="text" placeholder="address" name="name">
-              <input type="text" placeholder="number" name="name">
-              <input type="text" placeholder="complement" name="name">
-              <input type="text" placeholder="neighborhood" name="name">
-              <input type="text" placeholder="city" name="name">
-              <input type="text" placeholder="state" name="name">
-              
-              <button>Save</button>
-            </form>
+          <h1>NEW CLIENT</h1>
+      
+          <form action="">
+            <input type="text" placeholder="name client" name="name">
+            <input type="text" placeholder="name fantasia" name="name">
+            <input type="text" placeholder="cpf client" name="name">
+            <input type="text" placeholder="cnpj client" name="name">
+            <input type="text" placeholder="rg client" name="name">
+            <input type="text" placeholder="IE" name="name">
+            <input type="text" placeholder="phone" name="name">
+            <input type="text" placeholder="cell phone" name="name">
+            <input type="text" placeholder="email" name="name">
+            <input type="text" placeholder="address" name="name">
+            <input type="text" placeholder="number" name="name">
+            <input type="text" placeholder="complement" name="name">
+            <input type="text" placeholder="neighborhood" name="name">
+            <input type="text" placeholder="city" name="name">
+            <input type="text" placeholder="state" name="name">
+            
+            <button>Save</button>
+          </form>
+      </div>
+       <footer>footer aqui</footer>
     </main>
     
 </body>
