--- a/budget/templates/budget/pages/home.html
+++ b/budget/templates/budget/pages/home.html
@@ -6,25 +6,24 @@
     {% include "budget/partials/header.html" %}
  
    <main>
-     <form action="">
-     <h1>NEW BUDGET</h1>
- 
-     <form action="">
-       <input type="text" placeholder="name client" name="name">
-       <input type="text" placeholder="cpf client" name="name">
-       <input type="text" placeholder="cnpj client" name="name">
-       <input type="text" placeholder="id product" name="name">
-       <input type="text" placeholder="name product" name="name">
-       <input type="text" placeholder="number-sale" name="name">
-       <button>Save</button>
-     </form>
-     
-
-     
-     
+    <div class="content">
+      <form action="">
+        <h1>NEW BUDGET</h1>
+    
+        <form action="">
+          <input type="text" placeholder="name client" name="name">
+          <input type="text" placeholder="cpf client" name="name">
+          <input type="text" placeholder="cnpj client" name="name">
+          <input type="text" placeholder="id product" name="name">
+          <input type="text" placeholder="name product" name="name">
+          <input type="text" placeholder="number-sale" name="name">
+          <button>Save</button>
+        </form>
+    </div>
+    <footer>aqui está o footer</footer>
    </main>
 
-   <footer></footer>
+   
  
  
 </body>
