--- a/sale/templates/sales/pages/sales.html
+++ b/sale/templates/sales/pages/sales.html
@@ -3,7 +3,8 @@
   
   {% include "sales/partials/header.html" %}
   <main>
-    <h1>NEW SALE</h1>
+    <div class="content">
+      <h1>NEW SALE</h1>
      <form action="">
       <input type="text" placeholder="CPF/CNPJ client" name="name">
       <input type="text" placeholder="nome client" name="name">
@@ -15,18 +16,8 @@
 
       <button>ADD SALE</button>
      </form>
-    
-
-     
-
-
-         
-
-
-    <footer></footer>
+    </div>
+    <footer>footer</footer>
   </main>
-
-  <footer></footer>
-  
 </body>
 </html>
