--- a/sale/templates/sales/pages/searchsales.html
+++ b/sale/templates/sales/pages/searchsales.html
@@ -2,6 +2,11 @@
 <body>
   {% include "sales/partials/header.html" %}
   <main>
+    <div class="sub_menu">
+      <a href="/sales"><button>Painel</button></a>
+      <a href="/sale/new-sale"><button>Nova Venda</button></a>
+      <a href="/sales/searchsales"><button>Consultar Vendas</button></a>
+    </div>
     <h1>Search Sale</h1>
 
     <form action="">
