--- a/client/templates/client/pages/home.html
+++ b/client/templates/client/pages/home.html
@@ -6,28 +6,36 @@
 
     <main>
       <div class="content">
-        <form action="">
-          <h1>NEW CLIENT</h1>
-      
-          <form action="">
+        <a href="/client/register"><button>Cadastrar +</button></a>
+        <div class="filter">
+          <form action="" method="post">
+            <h5>Filtro</h5>
             <input type="text" placeholder="name client" name="name">
-            <input type="text" placeholder="name fantasia" name="name">
             <input type="text" placeholder="cpf client" name="name">
-            <input type="text" placeholder="cnpj client" name="name">
-            <input type="text" placeholder="rg client" name="name">
-            <input type="text" placeholder="IE" name="name">
-            <input type="text" placeholder="phone" name="name">
-            <input type="text" placeholder="cell phone" name="name">
-            <input type="text" placeholder="email" name="name">
-            <input type="text" placeholder="address" name="name">
-            <input type="text" placeholder="number" name="name">
-            <input type="text" placeholder="complement" name="name">
-            <input type="text" placeholder="neighborhood" name="name">
-            <input type="text" placeholder="city" name="name">
-            <input type="text" placeholder="state" name="name">
-            
-            <button>Save</button>
+            <button>Search</button>
           </form>
+        </div>
+          <div>
+            <h2>Clientes</h2>
+            <table>
+              <thead>
+                <tr>
+                  <th>Nome</th>
+                  <th>CPF ou CPNJ</th>
+                  <th>Contato</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for cliente in clientes%}
+                <tr>
+                  <td><a href="/client/{{cliente.id}}"><strong>{{cliente.nome}}</strong></a></td>
+                  <td>{{cliente.cpf_cnpj}}</td>
+                  <td>{{cliente.telefone}}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
       </div>
        <footer>footer aqui</footer>
     </main>
