--- a/sale/templates/sales/pages/sales.html
+++ b/sale/templates/sales/pages/sales.html
@@ -76,7 +76,7 @@
           
       </form> 
     </div>
-    <footer>footer</footer>
+    <footer>Assinatura</footer>
   </main>
   <script src="{% static 'sale/js/sales.js' %}"></script>
 </body>
