--- a/sale/templates/sales/pages/sales.html
+++ b/sale/templates/sales/pages/sales.html
@@ -75,6 +75,11 @@
         {% endif %}
           
       </form> 
+      <form action="enviar_orcamento" method="post">
+        {% if button_enviar %}
+         <button button type="submit">Enviar Orçamento</button>
+            {% endif %}
+          </form>
     </div>
     <footer>Assinatura</footer>
   </main>
