--- a/sale/templates/sales/pages/searchsales.html
+++ b/sale/templates/sales/pages/searchsales.html
@@ -18,7 +18,14 @@
 
       <button>Search</button>
     </form>
-    
+    <div>
+      {% for venda in vendas  %}
+      <a href="/sale/info/{{venda.num_sale}}"><p>{{venda.num_sale}}</p></a>
+      <p>{{venda.data_venda}}</p>
+      <p>{{venda.cliente}}</p>
+      <p>{{venda.valor}}</p>
+      {% endfor %}
+    </div>
   </main>
 
   <footer></footer>
