--- a/budget/templates/budget/pages/home.html
+++ b/budget/templates/budget/pages/home.html
@@ -7,18 +7,14 @@
  
    <main>
     <div class="content">
-      <form action="">
+      
         <h1>NEW BUDGET</h1>
     
-        <form action="">
-          <input type="text" placeholder="name client" name="name">
-          <input type="text" placeholder="cpf client" name="name">
-          <input type="text" placeholder="cnpj client" name="name">
-          <input type="text" placeholder="id product" name="name">
-          <input type="text" placeholder="name product" name="name">
-          <input type="text" placeholder="number-sale" name="name">
-          <button>Save</button>
-        </form>
+        <div class="sub_menu">
+          <a href="/budget/home"><button>Painel</button></a>
+          <a href="/budget/new_budget/"><button>Novo Orcamento</button></a>
+          <a href="/budget/search_budget/"><button>Consultar Orcamentos</button></a>
+        </div>
     </div>
     <footer>aqui está o footer</footer>
    </main>
