--- a/budget/templates/budget/partials/header.html
+++ b/budget/templates/budget/partials/header.html
@@ -15,5 +15,6 @@
         <a class="nav-link" href="/sales"><li>vendas</li></a>
         <a class="nav-link" href="/budget"><li>orçamento</li></a>
         <a class="nav-link" href="/client"><li>clientes</li></a>
+        <a class="nav-link"href="/nfe"><li>Entrada</li></a>
     </ul>
 </div>
