--- a/employee/templates/employee/partials/header.html
+++ b/employee/templates/employee/partials/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include "main/partials/head.html" %}
+{% include "client/partials/head.html" %}
 
 <div class="nav-bar">
     <ul class="nav-menu">
@@ -16,9 +16,5 @@
         <a class="nav-link" href="/budget"><li>orçamento</li></a>
         <a class="nav-link" href="/client"><li>clientes</li></a>
         <a class="nav-link"href="/nfe"><li>Entrada</li></a>
-        <a class="nav-link"href="/employee"><li>Funcionario</li></a>
-        <a class="nav-link"href="/payment"><li>Pagar</li></a>
-        <a class="nav-link"href="/receive"><li>Receber</li></a>
-        
     </ul>
 </div>
