--- a/stock/templates/stock/pages/home.html
+++ b/stock/templates/stock/pages/home.html
@@ -1,39 +1,26 @@
 {% include "stock/partials/head.html" %}
 <body>
-
     {% include "stock/partials/header.html" %}
 
     <main>
-      <div class="content">
-        <form action="">
-          <h1>NEW PRODUCT</h1>
-      
-          <form action="">
-            <input type="text" placeholder="name product" name="name">
-            <input type="text" placeholder="id product" name="name">
-            <input type="text" placeholder="category" name="name">
-            <input type="text" placeholder="description" name="name">
-            <input type="text" placeholder="sale price" name="name">
-            <input type="text" placeholder="cost price" name="name">
-            <input type="text" placeholder="quantity in stock" name="name">
-            <input type="text" placeholder="minimum stock" name="name">
-            <input type="text" placeholder="unit of measure" name="name">
-            <input type="text" placeholder="supplier" name="name">
-            <input type="text" placeholder="id supplier" name="name">
-            <input type="text" placeholder="location in stock" name="name">
-            <input type="text" placeholder="tax code" name="name">
-            <input type="text" placeholder="ICMS-IP-ETC" name="name">
-            <input type="text" placeholder="status product" name="name">
-            <input type="text" placeholder="guarantee" name="name">
-            <input type="text" placeholder="expiration date" name="name">
-            <input type="text" placeholder="additional observations" name="name">
+        <div class="content">
+            <h1>Painel de Controle</h1>
+
+            <div class="sub_menu">
+                <a href="{% url 'home' %}"><button type="button">Painel</button></a>
+                <a href="{% url 'new_product' %}"><button type="button">Novo Produto</button></a>
+                <a href="{% url 'product' %}"><button>Consultar Estoque</button></a>
+            </div>
             
-            
-            <button>Save</button>
-          </form>
-      </div>
-            <footer></footer>
+            <div class="card_datas">
+                <p>Aqui ficarão dados de vendas</p>
+                <p>um card com informações</p>
+                <p>como valor de venda</p>
+                <p>quantidade vendida no mês</p>
+            </div>
+        </div>
     </main>
     
+    <footer></footer>
 </body>
 </html>
