--- a/main/templates/main/pages/cadastros.html
+++ b/main/templates/main/pages/cadastros.html
@@ -5,7 +5,7 @@
     <main>
         <div class='content'>
             <h1>pagina cadastros</h1>
-            <a href="">Produto</a>
+            <a href="">Produto</a>ok
             <a href="">Cliente</a>
             <a href="">Fornecedor</a>
             <a href="">Funcionario</a>
