--- a/supplier/templates/supplier/partials/header.html
+++ b/supplier/templates/supplier/partials/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include "main/partials/head.html" %}
+{% include "client/partials/head.html" %}
 
 <div class="nav-bar">
     <ul class="nav-menu">
@@ -16,7 +16,5 @@
         <a class="nav-link" href="/budget"><li>orçamento</li></a>
         <a class="nav-link" href="/client"><li>clientes</li></a>
         <a class="nav-link"href="/nfe"><li>Entrada</li></a>
-        <a class="nav-link"href="/supplier"><li>Fornecedor</li></a>
-        
     </ul>
 </div>
