--- a/employee/templates/employee/pages/new_employee.html
+++ b/employee/templates/employee/pages/new_employee.html
@@ -9,8 +9,8 @@
             <a href="{% url 'new_employee' %}"><button>Novo Funcionário</button></a>
 
 
-            <a href="{% url 'search_employee' %}">
-                <button>Consultar Funcionário</button></a>
+            <a href="{% url 'search_employee' %}"><button>Consultar Funcionário</button></a>
+                
 
         </div>
 
