--- a/payment/templates/payment/pages/home.html
+++ b/payment/templates/payment/pages/home.html
@@ -11,7 +11,8 @@
     <h1>Bem-vindo à Página de Pagamento</h1>
     <!-- Link para a URL com nome 'home_payment' -->
     <a href="{% url 'home_payment' %}"><button>Painel</button></a>
-    <!-- Link para a URL com nome 'search_payment' -->
+    
+    <a href="{% url 'new_payment' %}"><button>Cadastrar Pagamento</button></a>
     <a href="{% url 'search_payment' %}"><button>Consultar Pagamento</button></a>
 </div>
 
