--- a/payment/templates/payment/pages/search_payment.html
+++ b/payment/templates/payment/pages/search_payment.html
@@ -7,7 +7,7 @@
     <main>
         <div>
             <a href="{% url 'home_payment' %}"><button>Painel</button></a>
-            <a href="{% url 'search_payment' %}"><button>Busca Boletos</button></a>
+            <a href="{% url 'new_payment' %}"><button>Cadastrar Pagamento</button></a>
         </div>
     
 
