--- a/receive/templates/receive/partials/header.html
+++ b/receive/templates/receive/partials/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include "main/partials/head.html" %}
+{% include "receive/partials/head.html" %}
 
 <div class="nav-bar">
     <ul class="nav-menu">
@@ -16,10 +16,5 @@
         <a class="nav-link" href="/budget"><li>orçamento</li></a>
         <a class="nav-link" href="/client"><li>clientes</li></a>
         <a class="nav-link"href="/nfe"><li>Entrada</li></a>
-        <a class="nav-link"href="/employee"><li>Funcionario</li></a>
-        <a class="nav-link"href="/payment"><li>Pagar</li></a>
-        <a class="nav-link"href="receive/home"><li>Receber</li></a>
-        <a class="nav-link"href="/supplier"><li>Fornecedor</li></a>
-        
     </ul>
 </div>
