--- a/supplier/templates/supplier/pages/details_supplier.html
+++ b/supplier/templates/supplier/pages/details_supplier.html
@@ -1,22 +1,22 @@
-{% include "client/partials/head.html" %}
+{% include "supplier/partials/head.html" %}
 <body>
 
 
-    {% include "client/partials/header.html" %}
+    {% include "supplier/partials/header.html" %}
 
     <main>
       <div class="content">
         <div>
-            <a href="/client"><button>Voltar</button></a>
+            <a href="/supplier"><button>Voltar</button></a>
         </div>
           <div>
-            <h2>{{client.nome}}</h2>
-            <p>{{client.email}}</p>
-            <p>{{client.telefone}}</p>
-            <p>{{client.cpf_cnpj}}</p>
-            <p>{{client.rg}}</p>
-            <p>{{client.ie}}</p>
-            <p>{{client.rua}}, {{client.numero_casa}}, {{client.complemento}}, {{client.bairro}}, {{client.cidade}}, {{client.estado}}</p>
+            <h2>{{supplier.nome}}</h2>
+            <p>{{supplier.email}}</p>
+            <p>{{supplier.contato}}</p>
+            <p>{{supplier.cnpj}}</p>
+            <p>{{supplier.rg}}</p>
+            <p>{{supplier.ie}}</p>
+            <p>{{supplier.rua}}, {{supplier.numero}}, {{supplier.bairro}}, {{supplier.cidade}}, {{supplier.estado}}, {{supplier.cep}}</p>
           </div>
           
       </div>
