--- a/payment/templates/payment/pages/new_payment.html
+++ b/payment/templates/payment/pages/new_payment.html
@@ -16,7 +16,7 @@
         <label for="num_nota">Número da Nota:</label>
         <input type="number" id="num_nota" name="num_nota" required>
 
-        <select name="nome" id="">
+        <select name="fornecedor" id="">
           <option value="">Fornecedor</option>
           {% for fornecedor in fornecedores %}
           <option value="{{fornecedor.cnpj}}">{{fornecedor.nome}}</option>
@@ -27,12 +27,15 @@
 
         <label for="vencimento">Data de Vencimento:</label>
         <input type="date" id="vencimento" name="vencimento" required>
+        <br>
 
         <label for="data_venda">Data da Venda:</label>
         <input type="date" id="data_venda" name="data_venda" required>
+        <br>
 
         <label for="valor">Valor:</label>
         <input type="number" step="0.01" id="valor" name="valor" required>
+        <br>
 
         <button type="submit">Registrar Pagamento</button>
       </form>
