finalizado-navbar-rotas

--- a/budget/templates/budget/pages/home.html
+++ b/budget/templates/budget/pages/home.html
@@ -11,7 +11,7 @@
         <h1>NEW BUDGET</h1>
     
         <div class="sub_menu">
-          <a href="/budget/home"><button>Painel</button></a>
+          <a href="/budget"><button>Painel</button></a>
           <a href="/budget/new_budget/"><button>Novo Orcamento</button></a>
           <a href="/budget/search_budget/"><button>Consultar Orcamentos</button></a>
         </div>
