--- a/receive/templates/receive/pages/searchreceive.html
+++ b/receive/templates/receive/pages/searchreceive.html
@@ -3,7 +3,7 @@
   {% include "receive/partials/header.html" %}
   <main>
     <div class="sub_menu">
-      <a href="/receive"><button>Painel</button></a>
+      <a href="/receive/home"><button>Painel</button></a>
       <a href="/receive/searchreceive"><button>Consultar Vendas</button></a>
     </div>
     <h1>Buscar Devedores</h1>
