--- a/budget/templates/budget/pages/new_budget.html
+++ b/budget/templates/budget/pages/new_budget.html
@@ -10,7 +10,11 @@
   <main>
     <div class="content">
       <div class="sub_menu">
-        <a href="/budget"><button>Painel</button></a>
+        <div class="sub_menu">
+          <a href="/budget"><button>Painel</button></a>
+          
+          <a href="/budget/search_budget/"><button>Consultar Orcamentos</button></a>
+        </div>
         
       </div>
       <h1>NEW BUDGET</h1>
