--- a/payment/templates/payment/pages/new_payment.html
+++ b/payment/templates/payment/pages/new_payment.html
@@ -4,7 +4,7 @@
   <main>
     <div class="content">
       <div class="sub_menu">
-        <a href="{% url 'home' %}"><button>Painel</button></a>
+        <a href="{% url 'home_payment' %}"><button>Painel</button></a>
         <a href="{% url 'search_payment' %}"><button>Consultar Pagamento</button></a>
       </div>
 
