--- a/receive/templates/receive/pages/home.html
+++ b/receive/templates/receive/pages/home.html
@@ -5,7 +5,7 @@
   <main>
     <div class="content">
       <div class="sub_menu">
-        <a href="receive/home"><button>Painel</button></a>
+        <a href="/receive/home"><button>Painel</button></a>
         <a href="/receive/searchreceive"><button>Consultar caloteiros</button></a>
       </div>
       <div>
