--- a/supplier/templates/supplier/partials/header.html
+++ b/supplier/templates/supplier/partials/header.html
@@ -16,5 +16,9 @@
         <a class="nav-link" href="/budget"><li>orçamento</li></a>
         <a class="nav-link" href="/client"><li>clientes</li></a>
         <a class="nav-link"href="/nfe"><li>Entrada</li></a>
+        <a class="nav-link"href="/employee"><li>Funcionario</li></a>
+        <a class="nav-link"href="/payment"><li>Pagar</li></a>
+        <a class="nav-link"href="/receive/home"><li>Receber</li></a>
+        <a class="nav-link"href="/supplier"><li>Fornecedor</li></a>
     </ul>
 </div>
